fix: Fixed package structure.
Moved application into a dedicated package. Adjusted content of the mainClass tag in pom.xml. Rebuilt the package.

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>io.github.edrla.Main</mainClass>
+                            <mainClass>io.github.edrla.jscan.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
